--- a/index.html
+++ b/index.html
@@ -41,7 +41,31 @@
           <i class="fas fa-users"></i>
         </div>
       </div>
-      <div class="header__account">d</div>
+      <div class="header__account">
+        <div class="header__actions">
+          <img
+            src="https://randomuser.me/api/portraits/women/44.jpg"
+            class="header__user-img"
+          />
+          <span class="header__user-name">Jane Doe</span>
+          <a href="#" class="header__circle-link">
+            <i class="header__link-icon fas fa-plus"></i>
+          </a>
+          <a href="#" class="header__circle-link">
+            <i class="header__link-icon fab fa-facebook-messenger">
+              <div class="header__account-bubble">8</div>
+            </i>
+          </a>
+          <a href="#" class="header__circle-link">
+            <i class="header__link-icon fas fa-bell">
+              <div class="header__account-bubble">16</div>
+            </i>
+          </a>
+          <a href="#" class="header__circle-link">
+            <i class="header__link-icon fas fa-sort-down"></i>
+          </a>
+        </div>
+      </div>
     </header>
   </body>
 </html>
