--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="header__logo-search">
           <i class="fas fa-search"></i>
-          <input type="text" />
+          <input type="text" placeholder="Search Facebook" />
         </div>
       </div>
       <div class="header__menu-tabs">
@@ -58,7 +58,7 @@
           </a>
           <a href="#" class="header__circle-link">
             <i class="header__link-icon fas fa-bell">
-              <div class="header__account-bubble">16</div>
+              <div class="header__account-bubble">11</div>
             </i>
           </a>
           <a href="#" class="header__circle-link">
@@ -67,5 +67,58 @@
         </div>
       </div>
     </header>
+    <section class="content-area content-area--feed">
+      <section class="sidenav">
+        <div class="sidenav__item">
+          <img
+            src="https://randomuser.me/api/portraits/women/44.jpg"
+            class="sidenav__item-img"
+          />
+          <span class="sidnav__item-title"> Jane Doe </span>
+        </div>
+        <div class="sidenav__item">
+          <div class="sidenav__item-icon">
+            <i class="fas fa-user-friends"></i>
+          </div>
+          <span class="sidenav__item-title"> Friends </span>
+        </div>
+        <div class="sidenav__item">
+          <div class="sidenav__item-icon">
+            <i class="fas fa-flag"></i>
+          </div>
+          <span class="sidenav__item-title">
+            Pages
+            <span class="sidenav__item-notification">
+              <div class="sidenav__item-notification-circle"></div>
+              9+ new
+            </span>
+          </span>
+        </div>
+        <div class="sidenav__item">
+          <div class="sidenav__item-icon sidenav__item-icon-circle-white">
+            <i class="fas fa-users"></i>
+          </div>
+          <span class="sidenav__item-title">
+            Groups
+            <span class="sidenav__item-notification">
+              <div class="sidenav__item-notification-circle"></div>
+              3+ new
+            </span>
+          </span>
+        </div>
+        <div class="sidenav__item">
+          <div class="sidenav__item-icon">
+            <i class="fas fa-store"></i>
+          </div>
+          <span class="sidenav__item-title"> Marketplace </span>
+        </div>
+        <div class="sidenav__item">
+          <div class="sidenav__item-icon sidenav__item-icon-circle">
+            <i class="fas fa-chevron-down"></i>
+          </div>
+          <span class="sidenav__item-title"> See More </span>
+        </div>
+      </section>
+    </section>
   </body>
 </html>
