--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <span class="sidenav__item-title"> Marketplace </span>
         </div>
         <div class="sidenav__item">
-          <div class="sidenav__item-icon sidenav__item-icon-circle">
+          <div class="sidenav__item-icon sidenav__item-icon--circle">
             <i class="fas fa-chevron-down"></i>
           </div>
           <span class="sidenav__item-title"> See More </span>
@@ -147,10 +147,26 @@
           <span class="sidnav__item-title"> Elon Musk Stonks </span>
         </div>
         <div class="sidenav__item">
-          <div class="sidenav__item-icon sidenav__item-icon-circle">
+          <div class="sidenav__item-icon sidenav__item-icon--circle">
             <i class="fas fa-chevron-down"></i>
           </div>
           <span class="sidenav__item-title"> See More </span>
+        </div>
+      </section>
+      <section class="feed">
+        <div class="stories">
+          <div class="stories__video-container">
+            <img
+              src="https://i.ytimg.com/vi/NlKamRgzIdk/maxresdefault.jpg"
+              class="stories__bg"
+            />
+            <div class="stories__title">
+              Create A Story
+              <div class="stories__new-btn">
+                <i class="fas fa-plus"></i>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </section>
